# exp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
exp/source/: CMakeLists.txt  main.c
exp/source/adt/: graph.c  string.c
exp/source/analysis/: allocation.c  analyze.c  finalize.c  infer_lifetimes.c  infer_types.c  lifetimes.c  typecheck.c  validate.c
exp/source/assembler/: directives.c
exp/source/backend/: IR_x64.c  allocations.c  as_directives.c  compute_allocations.c  compute_lifetimes.c  directives.c  emit_assembly.c  emit_x64_linux_assembly.c  instruction_selector.c  lifetime_intervals.c  lifetimes.c  live_intervals.c  register.c  register_allocator.c  register_set.c  x64_allocation.c  x64_allocator.c  x64_bytecode.c  x64_codegen.c  x64_context.c  x64_emit.c  x64_function_body.c  x64_gpr.c  x64_gprp.c  x64_instruction.c  x64_symbols.c
exp/source/codegen/: directives.c  lifetimes.c
exp/source/core/: analyze.c  assemble.c  codegen.c  compile.c  directives.c  evaluate.c  finalize.c  link.c  typecheck.c
exp/source/env/: call_stack.c  cli_options.c  constants.c  context.c  context_options.c  control_flow_graph.c  error.c  frames.c  global_labels.c  global_symbols.c  labels.c  locals.c  registers.c  source_locations.c  stack.c  string_interner.c  symbol_table.c  type_interner.c  values.c
exp/source/evaluate/: evaluate.c  top.c
exp/source/front/: lexer.c  parser.c
exp/source/frontend/: lexer.c  parser.c  source_location.c  token.c
exp/source/imr/: block.c  bytecode.c  frame.c  frames.c  function.c  function_body.c  instruction.c  lifetime.c  local.c  local_allocator.c  locals.c  location.c  operand.c  scalar.c  tuple.c  type.c  value.c
exp/source/intrinsics/: align_of.c  size_of.c  type_of.c
exp/source/scanning/: lexer.c  parser.c
exp/source/utility/: alloc.c  allocation.c  array_growth.c  bitset.c  cli_options.c  constant_string.c  graph.c  hash.c  int_types.c  io.c  log.c  memory.c  minmax.c  nearest_power.c  numeric_conversions.c  panic.c  process.c  pseudo_random.c  string.c  string_view.c  test  test.exp
libexp/: CMakeLists.txt  exp_byte.s  exp_start.s  exp_syscalls.s
libexp_runtime/: CMakeLists.txt  exp_byte.s
libexp_runtime/include/: exp_byte.h
libexp_runtime/source/: exp_byte.s
libexp_support/: CMakeLists.txt
libexp_support/include/support/: allocation.h  ansi_colors.h  array_growth.h  assert.h  bitset.h  cli_option_parser.h  config.h  constant_string.h  dynamic_array.h  hash.h  int_types.h  io.h  log.h  message.h  nearest_power.h  numeric_conversions.h  panic.h  process.h  random.h  scalar.h  source_location.h  string.h  string_view.h  unreachable.h
libexp_support/include/utility/: config.h  string_view.h
libexp_support/source/support/: allocation.c  array_growth.c  bitset.c  cli_option_parser.c  constant_string.c  hash.c  int_types.c  io.c  log.c  message.c  nearest_power.c  numeric_conversions.c  panic.c  process.c  random.c  scalar.c  string.c  string_view.c
libexp_support/source/utility/: io.c
libexp_utility/: CMakeLists.txt
libexp_utility/include/utility/: ansi_colors.h  config.h  dynamic_array.h  panic.h  string.h
libexp_utility/source/utility/: array_growth.c  log.c  string.c
source/: CMakeLists.txt  main.c
source/backend/: emit.c  emit_x64_linux_assembly.c  emitter.c
source/core/: compile.c  interpret.c
source/env/: constants.c  context.c  error.c  module.c  options.c  stack.c  string_interner.c  symbol_table.c  type_interner.c
source/filesystem/: io.c  path.c
source/frontend/: lexer.c  parser.c
source/imr/: ast.c  bytecode.c  constants.c  function.c  graph.c  registers.c  stack.c  type.c  value.c
source/intrinsics/: align_of.c  alignment.c  size.c  size_of.c  type_of.c
source/utility/: array_growth.c  cli_options.c  fileio.c  graph.c  io.c  log.c  log_message.c  minmax.c  nearest_power.c  numbers_to_string.c  options.c  panic.c  path.c  process.c  string.c  string_hash.c  string_view.c
test/: CMakeLists.txt  call.exp  cfg_tests.c  cli_options_tests.c  compile_tests.c  compute_allocations_tests.c  compute_lifetimes_tests.c  constants_tests.c  control_flow_graph_tests.c  division.exp  emit_tests.c  end_to_end_tests.c  graph_tests.c  instruction_tests.c  lexer_match.c  lexer_tests.c  lifetime_intervals_tests.c  lifetimes_tests.c  modulus.exp  multcation.exp  number_conversion.c  number_conversion_tests.c  options_tests.c  parse_tests.c  path_tests.c  pemdas.exp  register_set_tests.c  registers_tests.c  stack_tests.c  string_interner_tests.c  string_tests.c  symbol_table_tests.c  test.exp  type_interner_tests.c
test/end_to_end_tests/: CMakeLists.txt  addition.c  call.c  comment.c  division.c  global_constant.c  main.c  modulus.c  multiplication.c  multiply.c  pemdas.c  return_.c  subtraction.c  test_exp.c  test_exp.h  test_resource.c  test_resources.c  trivial_constant_folding.c  tuple.c
test/libexp_test/: CMakeLists.txt  test_exp.c  test_exp.h  test_resources.c  test_resources.h
test/resource_tests/: CMakeLists.txt  main.c  test_resource.c  test_resource.h  test_resources.c  test_resources.h
test/resources/: .README.txt
test/resources/call/: call_noargs.0.exp  call_noargs.255.exp  call_noargs_sum.2.exp  call_onearg.3.exp  call_onearg_sum.12.exp  call_sevenargs.28.exp  call_tenargs.55.exp  call_twoargs.18.exp  call_twoargs_nested.10.exp
test/resources/comment/: comment_after.4.exp  comment_before.0.exp  comment_inside.5.exp  comment_interspersed.2.exp  comment_multiple_before.1.exp  comment_nested.3.exp  (+2 more)
test/tests/: CMakeLists.txt  bitset_tests.c  cli_option_parser_tests.c  cli_options_tests.c  constants_tests.c  exp_byte_tests.c  graph_tests.c  lexer_tests.c  number_conversion_tests.c  parse_tests.c  resource_tests.c  string_interner_tests.c  string_tests.c  symbol_table_tests.c  type_interner_tests.c
test/unit_tests/: CMakeLists.txt  bitset_tests.c  cli_options_tests.c  constants_tests.c  graph_tests.c  lexer_tests.c  number_conversion_tests.c  parse_tests.c  string_interner_tests.c  string_tests.c  string_view_tests.c  symbol_table_tests.c  type_interner_tests.c
(+677 files in other folders)
